--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,23 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.material-icons{
+    font-size: 2.4em;
+    cursor: pointer;
+}
+.card{
+    width: 300px;
+}
+.card-image{
+    width: 300px;
+}
+.nav-wrapper {
+background-color:#3949ab;
+}
+.card .card-image .card-title{
+    padding-top: 400px;
+    color: black;
+    font-weight: 400
 }
